--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-body {background-image:url(background-image); }
-h2 {color: lightblue}
+body {background-image:url(background.jpeg); }
+h2	{color: black}
 h1 {color: white}
