--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-body {background-image:url(background.jpeg); }
+body {background-image:url(backgroun.jpg); }
 h2	{color: black}
-h1 {color: white}
+h1 {color: green}
